--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-firebase/analytics": "^19.1.1",
+    "@react-native-firebase/app": "^19.1.1",
+    "@react-native-firebase/remote-config": "^19.1.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "obrigado-redux-utils": "^3.0.17",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-compressor": "^1.8.24",
+    "react-native-create-thumbnail": "^2.0.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-svg": "^15.1.0",
+    "react-native-video": "^5.2.1",
+    "react-native-webview": "^13.8.4",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
@@ -34,6 +41,7 @@
     "@react-native/typescript-config": "0.73.1",
     "@redux-devtools/extension": "^3.3.0",
     "@types/react": "^18.2.6",
+    "@types/react-native-video": "^5.0.20",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
