--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "obrigado-redux-utils": "^3.0.17",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-compressor": "^1.8.24",
-    "react-native-create-thumbnail": "^2.0.0",
+    "react-native-gesture-handler": "^2.16.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-svg": "^15.1.0",
     "react-native-video": "^5.2.1",
-    "react-native-webview": "^13.8.4",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
