--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,9 +84,15 @@ android {
     }
     signingConfigs {
         debug {
-            storeFile file('debug.keystore')
+            storeFile file('debug.jks')
             storePassword 'android'
-            keyAlias 'androiddebugkey'
+            keyAlias 'android'
+            keyPassword 'android'
+        }
+        release {
+            storeFile file('debug.jks')
+            storePassword 'android'
+            keyAlias 'android'
             keyPassword 'android'
         }
     }
