--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-simple-toast": "^3.3.1",
     "react-native-svg": "^15.1.0",
     "react-native-video": "^5.2.1",
     "react-redux": "^9.1.0",
